--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/anusharana/studbud/issues"
   },
-  "homepage": "https://github.com/anusharana/studbud#readme"
+  "homepage": "https://github.com/anusharana/studbud#readme",
+  "dependencies": {
+    "express": "^4.18.0"
+  }
 }
