--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "studbud",
   "version": "1.0.0",
   "description": "Web appliction to manage study sessions for Year 9-12 students.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "parcel build ./public/index.html",
+    "dev": "parcel serve ./public/index.html"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,8 @@
   "homepage": "https://github.com/anusharana/studbud#readme",
   "dependencies": {
     "express": "^4.18.0"
+  },
+  "devDependencies": {
+    "parcel": "^2.5.0"
   }
 }
