--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "express": "^4.18.0"
   },
   "devDependencies": {
-    "parcel": "^2.5.0"
+    "@parcel/transformer-sass": "^2.5.0",
+    "autoprefixer": "^10.4.6",
+    "parcel": "^2.5.0",
+    "postcss": "^8.4.13",
+    "sass": "^1.51.0"
   }
 }
