--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "studbud",
   "version": "1.0.0",
   "description": "Web appliction to manage study sessions for Year 9-12 students.",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "parcel build ./public/index.html",
@@ -23,8 +22,8 @@
     "sass": "^1.51.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.5.0",
-    "parcel": "^2.5.0"
-
+    "@parcel/resolver-glob": "^2.6.0",
+    "@parcel/transformer-sass": "^2.6.0",
+    "parcel": "^2.6.0"
   }
 }
